# rust-starter

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.override.yaml  docker-compose.yaml  justfile
apps/sample/: Cargo.toml  Dockerfile
apps/sample/src/: main.rs  main_controller.rs
apps/sample/src/migration/: m20220101_000001_create_table.rs
apps/sample/src/state/: mod.rs
apps/sample/src/user/: controller.rs  mod.rs  model.rs  repository.rs  service.rs
libs/auth/: Cargo.toml
