[workspace]
members = ["apps/sample", "libs/auth"]
resolver = "2"

[workspace.dependencies]
dotenv = "0.15"
actix-rt = "2.5.0"
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.0.0-rc.5", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = { version = "1.0.0", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
async-trait = "0.1"
just = "1.34"
log = "0.4"
env_logger = "0.9"
cargo-watch = "7.8.0"
