[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
] }
dotenv = "0.15"
actix-rt = "2.5.0"
async-trait = "0.1"
